# d2x-xl

./: .cproject  .in  .project  CMakeLists.txt  D2X-XL-install.sh  INSTALL  Info.plist  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  UpgradeLog.XML  UpgradeLog2.XML  UpgradeLog3.XML  aclocal.m4  changelog.txt  conf.h  conf.h.in  config.status  configure  configure.ac  d2x-xl-makefiles.7z  d2x-xl.rc  d2x-xl.sln  d2x.sln  d2x.w32.rc  d2xtracker.pl  d2xtracker.sh  lcounter.txt  lightmaps.frag  lightmaps.vert  lightmaps2.frag  lightmaps2.vert  lightmaps3.frag  lightmaps3.vert  project.pbxproj  q  readme-d2x-xl.txt  (+7 more)
2d/: 2dsline.c  2dsline.cpp  Makefile  Makefile.am  Makefile.in  bitblt.c  bitblt.cpp  bitmap.c  bitmap.cpp  bitmap.h  box.c  box.cpp  canvas.c  canvas.cpp  circle.cpp  clip.h  disc.c  disc.cpp  font.c  font.cpp  gpixel.c  gpixel.cpp  ibitblt.c  ibitblt.cpp  line.c  line.cpp  linear.asm  palette.c  palette.cpp  pcx.c  pcx.cpp  pixel.c  pixel.cpp  poly.c  poly.cpp  rect.c  rect.cpp  rle.c  rle.cpp  scale.c  (+7 more)
3d/: Makefile  Makefile.am  Makefile.in  ase2model.c  ase2model.cpp  buildmodel.c  buildmodel.cpp  buildmodel.h  clipper.c  clipper.cpp  clipper.h  draw.c  draw.cpp  fastmodels.c  fastmodels.cpp  globvars.c  globvars.cpp  globvars.h  hitbox.c  hitbox.cpp  instance.c  instance.cpp  interp.asm  interp.c  interp.cpp  intersect.c  intersect.cpp  matrix.c  matrix.cpp  oof2model.c  oof2model.cpp  pof2model.c  pof2model.cpp  points.c  points.cpp  rod.c  rod.cpp  setup.c  setup.cpp  shadows.c  (+3 more)
ai/: Makefile  Makefile.am  Makefile.in  ai.cpp  aianimate.cpp  aiboss.cpp  aifire.cpp  aifire.cpp.bak  aiframe.cpp  aiinit.cpp  ailib.cpp  aimove.cpp  aipath.cpp  aisave.cpp  aisnipe.cpp  d1_ai.cpp  d1_ai.h  d1_aipath.cpp  d1_aistruct.h  escort.cpp  thief.cpp
arch/: Makefile  Makefile.am  Makefile.in
audio/: Makefile  Makefile.am  Makefile.in  audio.cpp  digi.cpp  digiobj.cpp  objectaudio.cpp  rbaudio.cpp  songs.cpp  soundthreads.cpp
cockpit/: Makefile  Makefile.am  Makefile.in  cockpit.cpp  cockpitdata.cpp  crosshairs.cpp  gauges.cpp  genericcockpit.cpp  genericdrawers.cpp  hud.cpp  hudicons.cpp  hudmsgs.cpp  statusbar.cpp  targetindicators.cpp  utilities.cpp
effects/: Makefile  Makefile.am  Makefile.in  blur.cpp  fireball.cpp  glare.cpp  glow-new.cpp  glow.cpp  glow.h  lightning.cpp  lightning_emitter.cpp  lightning_manager.cpp  lightning_node.cpp  newlightning.cpp  objsmoke.cpp  omega_lightning.cpp  particle_buffer.cpp  particle_emitter.cpp  particle_images.cpp  particle_manager.cpp  particle_shader.cpp  particle_system.cpp  particles.cpp  perlin.cpp  postprocessing.cpp  postprocessing.h  shrapnel.cpp  sparkeffect.cpp  waypoint.cpp
gameio/: IP2Country.cpp  IpToCountry.cpp  Makefile  Makefile.am  Makefile.in  addon_bitmaps.cpp  bm.cpp  bmread.cpp  createmesh.cpp  facegrid.cpp  gamemine.cpp  gamesave.cpp  hoard.cpp  iff.cpp  loadgame.cpp  loadgame.cpp.bak  loadgamedata.cpp  loadgeometry.cpp  loadmodeldata.cpp  loadobjects.cpp  loadsounds.cpp  loadtextures.cpp  mission.cpp  paging.cpp  piggy.cpp  playerprofile.cpp  playsave.cpp  savegame.cpp  state.cpp  tga.cpp
io/: Makefile  Makefile.am  Makefile.in  args.cpp  cfile.cpp  cfile.cpp.bak  d_io.cpp  hogfile.cpp  rwops.cpp
libmve/: Makefile  Makefile.am  Makefile.in  decoder16.c  decoder16.cpp  decoder8.c  decoder8.cpp  decoders.h  mve_audio.cpp  mve_audio.h  mve_main.c  mve_main.cpp  mvelib.c  mvelib.cpp  mvelib.h  mveplay.c  mveplay.cpp
lighting/: Makefile  Makefile.am  Makefile.in  dynlight.cpp  dynlight.cpp.bak  grayscaleshaders.cpp  headlight.cpp  light.cpp  light.cpp.bak  lightcluster.cpp  lightmap-new.cpp  lightmap.cpp  lightmapshaders.cpp  lightprecalc.cpp  lightprecalc.cpp.bak  lightrender.cpp  lightshaders.cpp
main/: Makefile  Makefile.am  Makefile.in  ai.c  ai.h  ai2.c  aiboss.c  aiframe.c  ailib.c  aipath.c  aisnipe.c  aistruct.h  ase.h  aseread.c  autodl.c  autodl.h  automap.c  automap.h  automapmenu.cpp  banlist.c  banlist.cpp  bm.c  bm.h  bmread.c  briefings.c  briefings.cpp  cameramenu.cpp  cameras.c  cameras.h  cheats.c  cheats.cpp  cheats.h  cmd.c  cmd.cpp  cntrlcen.c  cntrlcen.cpp  cntrlcen.h  cockpitmenu.cpp  collide.c  collide.cpp  (+326 more)
maths/: ImprovedPerlin.cpp  Makefile  Makefile.am  Makefile.in  PerlinNoise.cpp  Simplex.cpp  SimplexNoise.cpp  fix.asm  fixc.c  fixc.cpp  perlin.cpp  rand.c  rand.cpp  tables.c  tables.cpp  vecmat.c  vecmat.cpp  vecmata.asm
menus/: Makefile  Makefile.am  Makefile.in  Makfile.am  automapmenu.cpp  cameramenu.cpp  cockpitmenu.cpp  configmenu.cpp  coronamenu.cpp  detailsmenu.cpp  effectsmenu.cpp  entropymenu.cpp  fileselector.cpp  gameplaymenu.cpp  inputdevicemenu.cpp  lightmenu.cpp  lightningmenu.cpp  listbox.cpp  mainmenu.cpp  makefile.am  menu.cpp  menubackground.cpp  menuitem.cpp  messagebox.cpp  miscmenu.cpp  monsterballmenu.cpp  moviemenu.cpp  msgbox.cpp  netgamebrowser.cpp  netgamehelp.cpp  netgameinfo.cpp  netmenu.cpp  netplayerbrowser.cpp  newgamemenu.cpp  performancemenu.cpp  physicsmenu.cpp  powerupmenu.cpp  rendermenu.cpp  screenresmenu.cpp  shadowmenu.cpp  (+3 more)
models/: Makefile  Makefile.am  Makefile.in  aseread.cpp  hiresmodels.cpp  oofmath.cpp  oofread.cpp  pof.cpp  polymodel.cpp
network/: Makefile  Makefile.am  Makefile.in  autodl.cpp  banlist.cpp  download.cpp  download.h  entropymenu.cpp  monsterballmenu.cpp  mpstatus.cpp  multi.cpp  multi.cpp.bak  multibot.cpp  multimsg.cpp  netgamebrowser.cpp  netgamehelp.cpp  netgameinfo.cpp  netmenu.cpp  netmisc-new.cpp  netmisc-new.cpp.bak  netmisc-old.cpp  netmisc-old.cpp.bak  netmisc.cpp  netplayerbrowser.cpp  network.cpp  network_handshake.cpp  network_init.cpp  network_init.cpp.bak  network_join.cpp  network_lib.cpp  network_phandler.cpp  network_process.cpp  network_read.cpp  network_send.cpp  network_sync.cpp  network_thread.cpp  tracker.cpp  udp_interface.cpp  udp_interface.cpp.bak
objects/: Makefile  Makefile.am  Makefile.in  boss.cpp  createobject.cpp  criticalhit.cpp  effectobject.cpp  effectobjects.cpp  hostage.cpp  marker.cpp  objbufio.cpp  object.cpp  object.cpp.bak  object_physics.cpp  (+7 more)
(+1048 files in other folders)
