noinst_LIBRARIES = lib3d.a
INCLUDES = -I $(top_srcdir)/include-I $(top_srcdir)/main

lib3d_a_SOURCES = \
	clipper.cppglobvars.cppinterp.cpppoints.cppsetup.cpp \
	draw.cpp  instance.cppmatrix.cpprod.cpp shadows.cpp hitbox.cpp \
	fastmodels.cpp buildmodel.cpp ase2model.cpp oof2model.cpp pof2model.cpp
