noinst_LIBRARIES = lib3d.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

lib3d_a_SOURCES = \
	clipper.cpp globvars.cpp interp.cpp points.cpp setup.cpp \
	draw.cpp instance.cpp matrix.cpp rod.cpp shadows.cpp hitbox.cpp \
	fastmodels.cpp buildmodel.cpp ase2model.cpp oof2model.cpp pof2model.cpp
