noinst_LIBRARIES = lib3d.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

lib3d_a_SOURCES = \
	ase2model.cpp buildmodel.cpp clipper.cpp draw.cpp fastmodels.cpp globvars.cpp hitbox.cpp \
	interp.cpp matrix.cpp oof2model.cpp pof2model.cpp points.cpp rod.cpp setup.cpp shadows.cpp \
	transformation.cpp
	