noinst_LIBRARIES = libai.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libai_a_SOURCES = \
	ai.cpp aianimate.cpp aiboss.cpp aifire.cpp aiframe.cpp aiinit.cpp ailib.cpp \
	aimove.cpp aipath.cpp aisave.cpp aisnipe.cpp escort.cpp thief.cpp d1_ai.cpp
