noinst_LIBRARIES = libcockpit.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libcockpit_a_SOURCES = \
	cockpit.cpp cockpitdata.cpp crosshairs.cpp genericcockpit.cpp genericdrawers.cpp hud.cpp hudicons.cpp hudmsgs.cpp statusbar.cpp targetindicators.cpp utilities.cpp
