noinst_LIBRARIES = libeffects.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libeffects_a_SOURCES = \
	fireball.cpp lightning.cpp objsmoke.cpp particles.cpp perlin.cpp sparkeffect.cpp
	
