noinst_LIBRARIES = libeffects.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libeffects_a_SOURCES = \
	fireball.cpp glare.cpp lightning.cpp objsmoke.cpp shrapnel.cpp sparkeffect.cpp particle_shader.cpp particle_buffer.cpp \
	particles.cpp particle_emitter.cpp particle_system.cpp particle_manager.cpp particle_images.cpp waypoint.cpp \
	postprocessing.cpp lightning_node.cpp lightning_emitter.cpp lightning_manager.cpp omega_lightning.cpp glow.cpp
	
