noinst_LIBRARIES = libgameio.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libgameio_a_SOURCES = \
	bm.cpp gamemine.cpp gamesave.cpp hoard.cpp iff.cpp loadgame.cpp mission.cpp \
	paging.cpp piggy.cpp playsave.cpp state.cpp tga.cpp 
