noinst_LIBRARIES = libgameio.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libgameio_a_SOURCES = \
	addon_bitmaps.cpp createmesh.cpp facegrid.cpp loadgeometry.cpp loadobjects.cpp hoard.cpp iff.cpp \
	loadgame.cpp loadgamedata.cpp loadmodeldata.cpp loadsounds.cpp loadtextures.cpp mission.cpp paging.cpp \
	piggy.cpp playerprofile.cpp savegame.cpp tga.cpp IpToCountry.cpp
