noinst_LIBRARIES = liblighting.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

liblighting_a_SOURCES = \
	dynlight.cpp headlight.cpp light.cpp lightmap.cpp lightprecalc.cpp lightshaders.cpp
