noinst_LIBRARIES = libmodels.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libmodels_a_SOURCES = \
	aseread.cpp hiresmodels.cpp oofmath.cpp oofread.cpp pof.cpp polymodel.cpp
	
