EXTRA_SUBDIRS = include

noinst_LIBRARIES = libobjects.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL


libobjects_a_SOURCES = \
	hostage.cpp marker.cpp object.cpp player.cpp powerup.cpp reactor.cpp robot.cpp 
	

