noinst_LIBRARIES = libogl.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libogl_a_SOURCES = \
	fbuffer.cpp gr.cpp ogl_bitmap.cpp ogl_color.cpp ogl_defs.cpp ogl_fastrender.cpp ogl_hudstuff.cpp \
	ogl_lib.cpp ogl_render.cpp ogl_shader.cpp ogl_texcache.cpp ogl_texture.cpp ogl_pbuffer.cpp \
	sdlgl.cpp
