noinst_LIBRARIES = libphysics.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libphysics_a_SOURCES = \
	collide.cpp criticalhit.cpp hitbox_collision.cpp physics.cpp slowmotion.cpp sphere_collision.cpp visibility.cpp 
	