noinst_LIBRARIES = librender.a
INCLUDES = -I $(top_srcdir)/include

librender_a_SOURCES = \
	automap.cpp cameras.cpp fastrender.cpp gamepal.cpp gamerend.cpp glare.cpp morph.cpp objeffects.cpp \
	objrender.cpp oofrender.cpp polyobj.cpp radar.cpp render.cpp renderlib.cpp rendershadows.cpp \
	renderthreads.cpp sphere.cpp transprender.cpp 
	