noinst_LIBRARIES = librender.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

librender_a_SOURCES = \
	automap.cpp cameras.cpp fastrender.cpp gamepal.cpp gamerend.cpp glare.cpp morph.cpp objeffects.cpp \
	objrender.cpp oofrender.cpp polyobj.cpp radar.cpp render.cpp renderlib.cpp rendershadows.cpp \
	renderthreads.cpp sphere.cpp transprender.cpp 
	