noinst_LIBRARIES = librender.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

librender_a_SOURCES = \
	automap.cpp cameras.cpp fastrender.cpp morph.cpp objeffects.cpp objrender.cpp \
	oofrender.cpp polymodelrender.cpp radar.cpp renderframe.cpp renderlib.cpp  rendermine.cpp \
	rendershadows.cpp renderthreads.cpp sphere.cpp transprender.cpp visculling.cpp
	