noinst_LIBRARIES = libweapons.a

INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/effects -I $(top_srcdir)/input/include -I $(top_srcdir)/network/linux/include -I $(top_srcdir)/audio/linux/include -I /usr/local/include/SDL

libweapons_a_SOURCES = \
	controlweapon.cpp createweapon.cpp dropweapon.cpp fireweapon.cpp fusion.cpp omega.cpp pickupweapon.cpp seismic.cpp weaponhandlers.cpp weaponorder.cpp 
	
