noinst_LIBRARIES = libeditor.a
INCLUDES = -I$(top_srcdir)/include

libeditor_a_SOURCES = \
autosave.cpp  centers.cpp   curves.cpp    eglobal.cpp   ehostage.cpp  \
elight.cpp    eobject.cpp   eswitch.cpp   fixseg.cpp    func.cpp      \
group.cpp     info.cpp      kbuild.cpp    kcurve.cpp    kfuncs.cpp    \
kgame.cpp     kgroup.cpp    khelp.cpp     kmine.cpp     ksegmove.cpp  \
ksegsel.cpp   ksegsize.cpp  ktmap.cpp     kview.cpp     macro.cpp     \
med.cpp       meddraw.cpp   medmisc.cpp   medrobot.cpp  medsel.cpp    \
medwall.cpp   mine.cpp      objpage.cpp   segment.cpp   seguvs.cpp    \
texpage.cpp   texture.cpp

EXTRA_DIST = \
centers.h   editor.h    ehostage.h  eobject.h   eswitch.h   \
info.h      kdefs.h     kfuncs.h    macro.h     meddraw.h   \
medlisp.h   medmisc.h   medrobot.h  medsel.h    medwall.h   \
objpage.h   seguvs.h    texpage.h
